<resources>
    <string name="app_name">Diabetes Care</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="licenceDetails">
        This program is free software: you can redistribute it and or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n\n

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.
You should have received a copy of the GNU General Public License
along with this program. If not, see www.gnu.org/licenses/.</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="graph_mealType" translatable="false">
        <item>All</item>
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="reading_ok">OK</string>
    <string name="reading_hypo">Hypoglycemia</string>
    <string name="reading_low">Low</string>
    <string name="reading_high">High</string>
    <string name="reading_hyper">Hyperglycemia</string>

    <string name="fragment_overview_last_reading">Last check:</string>
    <string name="fragment_overview_trend">Trend over past month:</string>
    <string name="fragment_overview_trend_positive">in range and healthy</string>
    <string name="fragment_overview_selector_month">Month</string>
    <string name="fragment_overview_selector_day">Week</string>
    <string name="fragment_overview_selector_week">Day</string>

    <string name="spinner_title">Measured</string>

    <string name="tab_tips">Health Advice</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_add_title">Add Blood Glucose Level</string>
    <string name="dialog_add_concentration">Concentration</string>
    <string name="dialog_add_concentration_um" translatable="false">mmol/L</string>
    <string name="dialog_add_date">Date</string>
    <string name="dialog_add_time">Time</string>
    <string name="dialog_add_measured">Measured</string>
    <string name="dialog_add_type_1">Before breakfast</string>
    <string name="dialog_add_type_2">After breakfast</string>
    <string name="dialog_add_type_3">Before lunch</string>
    <string name="dialog_add_type_4">After lunch</string>
    <string name="dialog_add_type_5">Before dinner</string>
    <string name="dialog_add_type_6">After dinner</string>
    <string name="dialog_add_type_7">Snack</string>
    <string name="dialog_add_type_8">Bedtime</string>
    <string name="dialog_add_type_9">Before sleep</string>
    <string name="dialog_add_type_10">Fasting glucose</string>
    <string name="dialog_add_type_11">Recheck</string>
    <string name="dialog_add_type_12">Other</string>
    <string-array name="dialog_add_measured_list" translatable="false">
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string-array name="graph_item_list" translatable="false">
        <item>Week</item>
        <item>Day</item>
        <item>Month</item>
        <item>All</item>
    </string-array>
    <string-array name="unit_item_list" translatable="false">
        <item>mg/dl</item>
        <item>mmole/dl</item>
    </string-array>
    <string name="dialog_add_cancel">CANCEL</string>
    <string name="dialog_add_add">ADD</string>
    <string name="dialog_error2">Please enter a valid value.</string>
    <string name="dialog_error">Please fill all the fields.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_add_custom_type">Custom measurement category</string>
    <string name="title_activity_reminder">ReminderActivity</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="title_activity_hello">Hello.</string>
    <string name="helloactivity_headline">Hello.</string>
    <string name="helloactivity_terms">Terms of Use</string>
    <string name="helloactivity_subhead">We just need a few quick things before getting you started.</string>
    <string name="helloactivity_country">Country</string>
    <string name="helloactivity_age">Age</string>
    <string name="helloactivity_age_invalid">Please enter a valid age.</string>

    <string name="helloactivity_gender">Gender</string>
    <string name="helloactivity_gender_list_1">Male</string>
    <string name="helloactivity_gender_list_2">Female</string>
    <string name="helloactivity_gender_list_3">Other</string>

    <string-array name="helloactivity_gender_list" translatable="false">
        <item>@string/helloactivity_gender_list_1</item>
        <item>@string/helloactivity_gender_list_2</item>
        <item>@string/helloactivity_gender_list_3</item>
    </string-array>

    <string name="helloactivity_spinner_diabetes_type">Diabetes type</string>
    <string name="helloactivity_spinner_diabetes_type_1">Type 1</string>
    <string name="helloactivity_spinner_diabetes_type_2">Type 2</string>

    <string-array name="helloactivity_diabetes_type" translatable="false">
        <item>@string/helloactivity_spinner_diabetes_type_1</item>
        <item>@string/helloactivity_spinner_diabetes_type_2</item>
    </string-array>

    <string name="helloactivity_spinner_preferred_unit">Preferred unit</string>
    <string name="helloactivity_spinner_preferred_unit_1" translatable="false">mg/dL</string>
    <string name="helloactivity_spinner_preferred_unit_2" translatable="false">mmol/L</string>

    <string-array name="helloactivity_preferred_unit" translatable="false">
        <item>@string/helloactivity_spinner_preferred_unit_1</item>
        <item>@string/helloactivity_spinner_preferred_unit_2</item>
    </string-array>

    <string name="helloactivity_share_data">Share anonymous data for research.</string>
    <string name="helloactivity_hint_settings">You can change these in settings later.</string>
    <string name="helloactivity_button_next">NEXT</string>
    <string name="helloactivity_button_start">GET STARTED</string>
    <string name="title_activity_patient_information">Patient Information</string>

    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="ad_unit_id"> ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="listArray">
        <item>Ace</item>
        <item>Club</item>
    </string-array>

    <string-array name="listValues">
        <item>Ace</item>
        <item>Club</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

</resources>
