<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.droidking.diabetes.MainActivity$PlaceholderFragment">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/graph"
        android:orientation="horizontal"

        android:paddingTop="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/circle_hypo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/glucosio_reading_hypo"
            android:paddingTop="2px"
            android:paddingRight="8dp"
            android:text="@string/reading_hypo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/circle_low" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingTop="2px"
            android:textColor="@color/glucosio_reading_low"
            android:paddingRight="8dp"
            android:text="@string/reading_low" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/circle_ok" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/glucosio_reading_ok"
            android:textStyle="bold"
            android:paddingRight="8dp"
            android:paddingTop="2px"
            android:textSize="12sp"
            android:text="@string/reading_ok" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/circle_high" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/glucosio_reading_high"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingTop="2px"
            android:paddingRight="8dp"
            android:text="@string/reading_high" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/circle_hyper" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/glucosio_reading_hyper"
            android:textStyle="bold"
            android:textSize="12sp"
            android:paddingTop="2px"
            android:paddingRight="8dp"
            android:text="@string/reading_hyper" />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>
