<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.droidking.diabetes.Patient_informationActivity"
    tools:showIn="@layout/activity_patient_information2"
    >
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/helloactivity_mainframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="32dp"
            android:paddingLeft="32dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/activity_hello_title"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:paddingTop="6dp"
                android:text=""
                android:textColor="@color/glucosio_text_dark"
                android:textSize="@dimen/abc_text_size_display_1_material" />

            <TextView
                android:id="@+id/activity_hello_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/helloactivity_subhead"
                android:textColor="@color/glucosio_text"
                android:textSize="@dimen/abc_text_size_subhead_material" />



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/activity_hello_age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:hint="@string/helloactivity_age"
                        android:inputType="number"
                        android:singleLine="true"

                        android:textSize="@dimen/abc_text_size_body_2_material" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="06dp"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="141dp"
                        android:layout_height="wrap_content"
                        android:text="Preferred Unit"/>

                    <Spinner
                        android:id="@+id/unitsp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"

                        />
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:weightSum="2">

            </LinearLayout>

            <CheckBox
                android:id="@+id/activity_hello_check_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:checked="true"
                android:text="@string/helloactivity_share_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/helloactivity_hint_settings"
                android:textStyle="bold" />


            <Button
                android:text="Save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bsave" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text=">>"
                android:textColor="@color/glucosio_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/helloactivity_textview_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/helloactivity_terms"
                android:textColor="@color/glucosio_pink"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>



<!--LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="32dp"-->
